--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     --bg-color: #050915;
     --gray-color: #9DA2AF;
     --marge: 50px;
+    --decal: 50px;
     --min-size: 1280px;
     --max-size: 1280px;
 }
@@ -61,9 +62,11 @@
     display: flex;
     align-items: center;
     max-width: var(--min-size);
-    gap: 50px;
+    gap: var(--marge);
     margin: 0 auto;
     flex-wrap: wrap;
+    /* overflow: hidden; */
+    padding: var(--marge);
 }
 .container > * {
     display: flex;
@@ -72,7 +75,7 @@
     flex-grow: 1;
     flex-basis: 0;
 }
-.container > div::before {
+/* .container > div::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -80,7 +83,7 @@
     background-color: var(--main-color);
     opacity: .1;
     border-radius: 25px;
-}
+} */
 
 .dark {
     background-color: var(--bg-color);
@@ -127,7 +130,7 @@
 
 section, footer {
     margin-top: 150px;
-    padding: var(--marge);
+    /* padding: var(--marge); */
 }
 section img {
     object-fit: cover;
@@ -204,8 +207,8 @@ h1 {
 
 
 #expertises .container > div::before {
-    top: var(--marge);
-    left: var(--marge);
+    top: var(--decal);
+    left: var(--decal);
 }
 #expertises img {
     height: 250px;
@@ -214,9 +217,9 @@ h1 {
 
 #slider {
     display: flex;
-    gap: 25px;
-    padding: 50px 25px 25px 25px !important;
-    max-width: 1330px !important;
+    gap: var(--marge);
+    padding: 25px 0 !important;
+    max-width: var(--min-size) !important;
     margin: 0 auto;
     overflow-x: auto;
 }
@@ -230,6 +233,12 @@ h1 {
     min-width: 350px;
     border-radius: 25px;
     box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.slide:first-child {
+    margin-left: var(--marge);
+}
+.slide:last-child {
+    margin-right: var(--marge);
 }
 .slide > div {
     display: grid;
@@ -245,8 +254,8 @@ h1 {
 
 
 #Nous .container > div::before {
-    top: var(--marge);
-    right: var(--marge);
+    top: var(--decal);
+    right: var(--decal);
 }
 #Nous img {
     height: 350px;
@@ -263,7 +272,7 @@ h1 {
 #qualité .container .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(275px, 1fr)); /* Utilise auto-fit pour faire en sorte que les éléments s'ajustent automatiquement à la taille de l'écran */
-    grid-gap: 50px; /* Espacement entre les éléments */
+    grid-gap: var(--marge); /* Espacement entre les éléments */
 }
 #qualité .container .grid .item {
     padding: 25px;
@@ -274,7 +283,8 @@ h1 {
     align-items: center;
     max-width: var(--max-size);
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 25px;
+    padding: var(--marge);
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 50px;
@@ -295,8 +305,8 @@ h1 {
     border-radius: 100px 0 100px 0;
 }
 #seo .container > div::before {
-    bottom: var(--marge);
-    left: var(--marge);
+    bottom: var(--decal);
+    left: var(--decal);
 }
 #seo .container > div .stats {
     display: flex;
@@ -324,8 +334,8 @@ h1 {
     border-radius: 0 100px 0 100px;
 }
 #boutique .container > div::before {
-    bottom: var(--marge);
-    right: var(--marge);
+    bottom: var(--decal);
+    right: var(--decal);
 }
 #boutique .apps {
     display: flex;
@@ -365,15 +375,18 @@ h1 {
 
 
 
+#articles {
+    padding: 0 !important;
+}
 #articles h2 {
     text-align: center;
     margin-bottom: 25px;
 }
 #articles__container {
     display: flex;
-    gap: 50px;
-    padding: 25px !important;
-    max-width: 1330px !important;
+    gap: var(--marge);
+    padding: 25px 0 !important;
+    max-width: var(--min-size) !important;
     margin: 0 auto;
     overflow-x: auto;
 }
@@ -401,23 +414,34 @@ h1 {
     left: 0;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0) 75%);
 }
+.article:first-child {
+    margin-left: var(--marge);
+}
+.article:last-child {
+    margin-right: var(--marge);
+}
 .article * {
     fill: #fff;
     color: #fff;
 }
 
 
-
+footer > div {
+    padding: var(--marge);
+}
 footer hr {
     margin: 50px auto;
+    max-width: calc(var(--max-size) - 2*var(--marge));
+    padding: 0 var(--marge);
+}
+#footer {
     max-width: var(--max-size);
+    margin: 0 auto;
 }
 #footer > div {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    max-width: var(--max-size);
-    margin: 0 auto;
 }
 #footer > div:first-child {
     margin-bottom: 25px;
@@ -430,11 +454,66 @@ footer hr {
 }
 
 
+
+@media (max-width: 900px) {
+    :root {
+        --marge: 25px;
+        --decal: 50px;
+    }
+}
+
+
 @media (max-width: 850px) {
     header ul li {
         display: none;
     }
     header #burger_menu, header ul li:first-child {
         display: initial;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .container {
+        flex-direction: column;
+    }
+
+    #contenu .container > div {
+        place-content: end;
+    }
+
+    #landing .container > div {
+        place-content: center;
+    }
+}
+
+@media (max-width: 650px) {
+    .container > img {
+        height: 250px !important;
+    }
+}
+
+@media (max-width: 450px) {
+    .devis > div:last-child {
+        width: 100%;
+    }    
+
+    .btn, .btn2 {
+        width: 100%;
+    }
+    .btn {
+        background-color: var(--main-color);
+        color: #fff;
+    }
+    .dark .btn {
+        background-color: #fff;
+        color: var(--bg-color);
+    }
+    .btn2 {
+        justify-content: center;
+    }
+
+    section, footer {
+        margin-top: 75px;
     }
 }
