--- a/style.css
+++ b/style.css
@@ -382,7 +382,6 @@ h1 {
 
 #contenu {
     height: min(100vh, 1000px);
-    background-image: url('./images/img5.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -394,17 +393,27 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0) 65%);
-    opacity: 0.65;
+    /* background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0) 65%);
+    opacity: 0.65; */
+    background-image: linear-gradient(10deg, var(--bg-color) 30%, #05091500 60%);
+    z-index: 997;
 }
 #contenu .container {
     height: 100%;
     align-items: end;
+    z-index: 998;
 }
 #contenu .container > div {
     max-width: 650px;
 }
-
+#video-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 #articles {
