--- a/style.css
+++ b/style.css
@@ -177,8 +177,9 @@ body {
 }
 
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
     z-index: 999;
     width: 100%;
 }
@@ -272,6 +273,9 @@ h1 {
     height: 100%;
     width: 100%;
     margin: auto 0;
+}
+.phone_anim::-webkit-media-controls {
+    display: none; /* Masquer les contrôles de lecture */
 }
 
 
@@ -438,7 +442,7 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    /* background-image: url('./images/img5.jpg'); */
+    background-image: url('./images/img5.jpg');
 }
 #contenu::before {
     content: "";
@@ -467,6 +471,9 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+#video-bg::-webkit-media-controls {
+    display: none; /* Masquer les contrôles de lecture */
 }
 
 
@@ -559,6 +566,30 @@ footer hr {
 
 
 
+/* Largeur de la barre de défilement */
+::-webkit-scrollbar {
+    width: 5px; /* Changez la largeur selon vos préférences */
+    height: 5px;
+}
+
+/* Couleur de fond de la barre de défilement */
+::-webkit-scrollbar-track {
+    background: #fff; /* Changez la couleur selon vos préférences */
+}
+
+/* Couleur de remplissage de la barre de défilement */
+::-webkit-scrollbar-thumb {
+    background: var(--bg-color); /* Changez la couleur selon vos préférences */
+}
+
+/* Ajouter une bordure à la barre de défilement */
+::-webkit-scrollbar-thumb:hover {
+    background: #050915ee; /* Changez la couleur selon vos préférences */
+}
+
+
+
+
 @media (max-width: 950px) {
     header ul:first-child li {
         display: none;
@@ -619,7 +650,7 @@ footer hr {
 
 @media (max-width: 650px) {
     .container > img {
-        height: 250px !important;
+        height: 200px !important;
     }
 }
 
@@ -643,6 +674,13 @@ footer hr {
         justify-content: center;
     }
 
+    h1 {
+        font-size: 48px;
+    }
+    h2 {
+        font-size: 28px;
+    }
+
     header ul:last-child li:last-child {
         display: flex;
         width: 100%;
@@ -650,6 +688,10 @@ footer hr {
 
     section, footer {
         margin-top: 75px;
+    }
+
+    .slide a, .article a {
+        width: fit-content !important;
     }
 }
 
